[package]
name = "concentric"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"

juniper = { version = "0.15", features = ["expose-test-schema"] }
juniper_graphql_ws = "0.3"
juniper_warp = { version = "0.7", features = ["subscriptions"] }
env_logger = "0.10"
log = "0.4"
