[package]
name = "concentric"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "headers"] }
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"

sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
    "chrono",
] }

chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
bcrypt = "0.15"
